Issue 15487: **Participant group names don't wrap in participant list web part - handle use-case for long group names that don't have any white space
Issue 15312: **Export/import - attachment reports lose attachments 
- round trip the attachment for attachment reports

Issue 13496: **illegalStateException from participant detail page when duplicate exists in demographic type dataset 
- better support for older studies that may have allowed duplicate records in demographic dataset
- show first record for a given participant and then log an exception

Fix a couple of places where Ext. was not changed to Ext4. for time chart wizard upgrade

--- a/study/webapp/study/DataViewsPanel.css
+++ b/study/webapp/study/DataViewsPanel.css
@@ -23,6 +23,7 @@
 
 .normalwrap-gridcell {
   white-space: normal !important;
+  word-wrap: break-word;
 }
 
 /* Specific to Data Views Panel */
